# wecare-ai-tickets

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  get_linear_ids.py  pyproject.toml
backend/: config.py  main.py  pyproject.toml
backend/routes/: tickets.py  webhooks_linear.py
backend/services/: ai.py  clerk_auth.py  db.py  email.py  linear.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: tickets.js
frontend/src/components/: AiPreview.jsx  AppLayout.jsx  CursorPrompt.jsx  TicketForm.jsx
frontend/src/pages/: LoginPage.jsx  MeusChamadosPage.jsx  NewTicketPage.jsx
